tests/ui/rfcs/rfc-2457-non-ascii-idents/crate_name_nonascii_forbidden-1.rs
extern crate ьаг; //~ ERROR cannot load a crate with a non-ascii name `ьаг`

fn main() {}

// ferrocene-annotations: fls_gklst7joeo33
// External Crates
// ferrocene-annotations: fls_21vnag69kbwe
// Identifiers
